--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Sound Wave</title>
 </head>
 <body>
-	<!-- <input type="file" id="audio-file" accept="audio/*"> -->
+	<input type="file" id="audio-file" accept="audio/*">
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
