--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Sound Wave</title>
 </head>
+
 <body>
-	<input type="file" id="audio-file" accept="audio/*">
+    <div class="wave_box">
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
+    </div>
+    <button class="record-button" id="recordButton"></button>
 
     <script src="script.js"></script>
 </body>
+
 </html>
